# jangdokdae

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
apps/: main.py
apps/scripts/: collector_pipeline.py  gcp_cluster_smoke.py  generate_issue_docents.py
apps/scripts/db/: create_article_analysis.sql  create_issue_docent.sql  create_table.sql  delete.sql  drop_table.sql
apps/src/api/: analyzer.py  auth.py  issue_docent.py  users.py
apps/src/config/: cofig.py  database.py  getenv.py  google_vertex_conf.py
apps/src/controllers/: routing.py
apps/src/exceptions/: base.py  collector_exceptions.py  company_exceptions.py  extraction_exceptions.py  pipeline_exceptions.py  processing_exceptions.py
apps/src/issue_docent/: config.py
apps/src/issue_docent/graphs/: __init__.py  graph.py  nodes.py  state.py
apps/src/issue_docent/llm/: __init__.py  client.py  prompt_loader.py
apps/src/issue_docent/prompts/: article_brief.md  cluster_summary.md  content_plan.md  issue_docent.md  quiz.md
apps/src/issue_docent/scripts/: dry_run_issue_docent_quality.py  generate_issue_docents.py
apps/src/models/: DTO.py  analyzer_dto.py  article_analysis.py  issue_docent.py  stock_term.py
apps/src/prompts/: entity_extraction.txt
apps/src/repositories/: article_analysis.py  issue_docent.py  pipeline_store.py
apps/src/schemas/: issue_docent.py  issue_docent_llm.py
apps/src/services/analyzer/: analyzer_service.py  db_cluster_loader.py  issue_based_analyzer.py  workflow.py
apps/src/services/auth/: jwt.py  oauth.py
apps/src/services/collector/: company_collector.py  company_master_collector.py  krx_collector.py  macro_collector.py  news_collector.py
apps/src/services/embedder/: news_clusterer.py  news_embedder.py
apps/src/services/extractor/: entity_extractor.py
apps/src/services/issue_docent/: generation_service.py  term_matcher.py  (+2 more)
docs/: API_GUIDE.md  AUTH_ONBOARDING.md  BE_ARCHITECTURE.md  COLLECTOR_PIPELINE.md  PIPELINE.md  analysis.md  analysis_cluster_input.json  analyzer.md  cluster_processing_flow.md  issue_docent_quality_100_review.md  issue_docent_upload_to_neon.md
docs/examples/: analysis_input.json  analysis_output.json
tests/api/: test_issue_docent_routes.py
tests/unit/: test_issue_docent_generation_service.py  test_issue_docent_graph.py  test_issue_docent_llm_client.py  test_issue_docent_prompt_loader.py  test_issue_docent_quality_script.py  test_issue_docent_schemas.py  test_issue_docent_sector_companies.py  test_issue_docent_service.py  test_issue_docent_term_matcher.py  test_model_metadata.py
(+3 files in other folders)
